pkg/front_end/testcases/no_such_method_forwarders/multiple_abstract_setters.dart.weak.outline.expect
library;
import self as self;
import "dart:core" as core;

class A extends core::Object {
  synthetic constructor •() → self::A
    ;
  set foo(core::int? value) → void
    ;
  get bar() → core::int?
    ;
}
class B extends core::Object {
  synthetic constructor •() → self::B
    ;
  set foo(core::double? value) → void
    ;
  get bar() → core::double?
    ;
}
class C extends core::Object {
  synthetic constructor •() → self::C
    ;
  set foo(core::num? value) → void
    ;
  get bar() → Null
    ;
}
class D extends core::Object implements self::C, self::A, self::B {
  synthetic constructor •() → self::D
    ;
  method noSuchMethod(core::Invocation _) → dynamic
    ;
  no-such-method-forwarder get bar() → Null
    return this.{self::D::noSuchMethod}(new core::_InvocationMirror::_withType(#bar, 1, const <core::Type*>[], const <dynamic>[], core::Map::unmodifiable<core::Symbol*, dynamic>(const <core::Symbol*, dynamic>{}))){(core::Invocation) → dynamic} as{TypeError,ForDynamic} Null;
  no-such-method-forwarder set foo(core::num? value) → void
    return this.{self::D::noSuchMethod}(new core::_InvocationMirror::_withType(#foo=, 2, const <core::Type*>[], core::List::unmodifiable<dynamic>(<dynamic>[value]), core::Map::unmodifiable<core::Symbol*, dynamic>(const <core::Symbol*, dynamic>{}))){(core::Invocation) → dynamic};
}
static method main() → dynamic
  ;


Extra constant evaluation status:
Evaluated: SymbolLiteral @ org-dartlang-testcase:///multiple_abstract_setters.dart:20:7 -> SymbolConstant(#bar)
Evaluated: ListLiteral @ org-dartlang-testcase:///multiple_abstract_setters.dart:20:7 -> ListConstant(const <Type*>[])
Evaluated: ListLiteral @ org-dartlang-testcase:///multiple_abstract_setters.dart:20:7 -> ListConstant(const <dynamic>[])
Evaluated: MapLiteral @ org-dartlang-testcase:///multiple_abstract_setters.dart:20:7 -> MapConstant(const <Symbol*, dynamic>{})
Evaluated: SymbolLiteral @ org-dartlang-testcase:///multiple_abstract_setters.dart:20:7 -> SymbolConstant(#foo=)
Evaluated: ListLiteral @ org-dartlang-testcase:///multiple_abstract_setters.dart:20:7 -> ListConstant(const <Type*>[])
Evaluated: MapLiteral @ org-dartlang-testcase:///multiple_abstract_setters.dart:20:7 -> MapConstant(const <Symbol*, dynamic>{})
Extra constant evaluation: evaluated: 19, effectively constant: 7
